resources/advanced-routing/jwt-routing/2nd-layer-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: admins-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`app1.traefik.internal`) && Header(`Group`, `admins`)"
      services:
        - name: admins-svc
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: maintainers-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`app1.traefik.internal`) && Header(`Group`, `maintainers`)"
      services:
        - name: maintainers-svc
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: else-route
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`app1.traefik.internal`)"
      services:
        - name: else-svc
          port: 8080
